# mylloc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_lib.sh  install_env.sh  install_lib.sh  library.h  memblock.c  memblock.h  mylloc.c  mylloc.h
.github/workflows/: main.yaml
include/: memblock.h  mylloc.h
src/: memblock.c  mylloc.c
tests/: test_malloc.c  test_mylloc.c  testfunc.c  testfunc.h
tests/e2e/: e2e.c  runtest.py
tests/unit tests/: test_mylloc.c  testfunc.c  testfunc.h
